[gd_scene load_steps=2 format=3 uid="uid://d1tqap7t4c2a0"]

[ext_resource type="Script" path="res://scripts/fx/telegraph_indicator.gd" id="1"]

[node name="TelegraphIndicator" type="Node2D"]
script = ExtResource("1")

[node name="SFX" type="AudioStreamPlayer" parent="."]
volume_db = -6.0

[node name="Ground" type="Node2D" parent="."]

[node name="Line" type="Line2D" parent="Ground"]
width = 6.0
points = PackedVector2Array(0, 0, 240, 0)

default_color = Color(1, 0.65, 0.15, 0.75)

[node name="DamageLabel" type="Label" parent="Ground"]
text = "10"
position = Vector2(100, -22)

[node name="LockIcon" type="Label" parent="."]
text = "LOCK"
horizontal_alignment = 1
vertical_alignment = 1
position = Vector2(-24, -56)
size = Vector2(48, 20)
visible = false
